@@ -1,0 +1,6 @@
+package com.gentics.mesh.metric;
+
+public interface Metric {
+	String key();
+	String description();
+}
