@@ -7,6 +7,7 @@ import static com.gentics.mesh.core.rest.MeshEvent.BRANCH_UPDATED;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 
+import com.gentics.mesh.cache.impl.EventAwareCacheFactory;
 import com.gentics.mesh.core.data.Branch;
 
 import io.vertx.core.Vertx;
@@ -17,18 +18,18 @@ public class ProjectBranchNameCacheImpl extends AbstractMeshCache<String, Branch
 	private static final long CACHE_SIZE = 500;
 
 	@Inject
-	public ProjectBranchNameCacheImpl(Vertx vertx, CacheRegistry registry) {
-		super(createCache(vertx), registry, CACHE_SIZE);
+	public ProjectBranchNameCacheImpl(EventAwareCacheFactory factory, CacheRegistry registry) {
+		super(createCache(factory), registry, CACHE_SIZE);
 	}
 
-	private static EventAwareCache<String, Branch> createCache(Vertx vertx) {
-		return EventAwareCache.<String, Branch>builder()
+	private static EventAwareCache<String, Branch> createCache(EventAwareCacheFactory factory) {
+		return factory.<String, Branch>builder()
 			.events(BRANCH_UPDATED, BRANCH_CREATED, BRANCH_DELETED)
 			.action((event, cache) -> {
 				cache.invalidate();
 			})
 			.maxSize(CACHE_SIZE)
-			.vertx(vertx)
+			.name("projectbranchname")
 			.build();
 	}
 }
