@@ -26,7 +26,7 @@ public class AbstractOrientDBTest {
 		when(metrics.timer(Mockito.any())).thenReturn(Mockito.mock(Timer.class));
 		when(metrics.counter(Mockito.any())).thenReturn(Mockito.mock(Counter.class));
 		when(metrics.meter(Mockito.any())).thenReturn(Mockito.mock(Meter.class));
-		when(metrics.resetableCounter(Mockito.any())).thenReturn(Mockito.mock(ResettableCounter.class));
+		when(metrics.resettableCounter(Mockito.any())).thenReturn(Mockito.mock(ResettableCounter.class));
 		Lazy<BootstrapInitializer> lazyBoot = mock(Lazy.class);
 		BootstrapInitializer bootMock = mock(BootstrapInitializer.class);
 		when(lazyBoot.get()).thenReturn(bootMock);
