@@ -31,6 +31,8 @@ By default `ES_6` will be used thus no changes are required for existing install
 
 icon:plus[] Core: A new endpoint for administration has been added. The `/admin/debuginfo` endpoint lets you gain various informations about the system. Take a look at the link:{{< relref "administration-guide.asciidoc" >}}#debuginfo[administration guide] for details.
 
+icon:plus[] Monitoring: New metrics for caching statistics have been added. Take a look at the link:{{< relref "monitoring.asciidoc" >}}#metrics[documentation] for the new metrics.
+
 icon:check[] OrientDB: The included OrientDB version has been updated to version 3.0.24
 
 [[v1.0.2]]
